Refactor PostControllerTest to use TestUtil for JSON serialization